correction contraste

--- a/style.css
+++ b/style.css
@@ -795,7 +795,7 @@ h4 {
 }
 
 .white--footer{
-    color: #364559!important;
+    color: #2B3745!important;
     font-weight: bold;
     font-style: italic;
     font-size: 18px;
